# bad-file-compressor

./: Cargo.toml  README.md
src/: compress.rs  decompress.rs  m_compress.rs  main.rs
