[package]
name = "bad_compressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.7", features = ["derive"] }